Updated styling for readability

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>—SWC—</title>
+    <title>—Seattle Whiskey Collective—</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -10,7 +10,7 @@
     <link href='http://fonts.googleapis.com/css?family=Playfair+Display:900,900italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Old+Standard+TT:400,400italic,700' rel='stylesheet' type='text/css'>
 
-    <link href="css/variables.less" rel="stylesheet" media="screen">
+    <link href="css/variables.css" rel="stylesheet" media="screen">
 
     <!-- <link href="css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
@@ -31,7 +31,7 @@
     <div class="container">
 
       <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-8 col-offset-2" id="logo">
           <img src="img/swcdark.png" class="img-responsive" alt="Reponsive Logo">
         </div>
       </div>
@@ -41,17 +41,23 @@
         <div class="col-lg-4">
           <h2>Who We Are</h2>
           <hr>
-          <p>Whiskey's on the rise, and we want in. Simply put, we're whiskey drinkers like you. We want to find our favorites without breaking the bank. No formal training, no gain for ourselves—just a spirit of love and love of a spirit.</p>
+          <p>Whiskey's on the rise, and we want in.<br>
+          Simply put, we're whiskey drinkers like you. We want to find our favorites without breaking the bank.<br>
+          No formal training, no gain for ourselves—just a spirit of love and love of a spirit.</p>
         </div>
         <div class="col-lg-4">
           <h2>Our Mission</h2>
           <hr>
-          <p>What fun is whiskey by yourself? As we learn about whiskeys from all over the country, we want you to join us in a tasting community. If you're interested in whiskey, we've got a home for you.  </p>
+          <p>What fun is whiskey by yourself?<br>
+          As we learn about whiskeys from all over the country, we want you to join us in a tasting community.<br>
+          If you're interested in whiskey, we've got a home for you. </p>
        </div>
         <div class="col-lg-4">
           <h2>Details</h2>
           <hr>
-          <p>We'll meet monthly at various homes and apartments for whiskey tastings. Bourbon and Rye only. Save your money on a cocktail every month and bring it along—it'll buy you at least 3 whiskey tastings each meeting. Only the committed are accepted, and spots are limited based on bottles purchased.</p>
+          <p>Bourbon and Rye only.<br>
+          Save the money you'd spend on a cocktail—it'll buy you at least 3 whiskey tastings each meeting.<br>
+          Remember, spots are limited based on bottles purchased.</p>
         </div>
       </div>
     </div>
