Added favicon ref

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>—Seattle Whiskey Collective—</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
