Huge amount of changes to site. New pages (payments) button, etc.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>—Seattle Whiskey Collective—</title>
+    <title>Seattle Whiskey Collective</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -115,8 +115,5 @@
     <script src="http://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-
-    <!-- Optionally enable responsive features in IE8 -->
-    <script src="js/respond.js"></script>
   </body>
 </html>
