Updated pages, added .js

--- a/becomeamember.html
+++ b/becomeamember.html
@@ -35,17 +35,17 @@
     <div class="container">
 
     <div class="row">
-        <div class="col-lg-8 col-offset-2" id="logo">
+        <div class="col-lg-2 col-offset-5" id="logo">
           <img src="img/swcdark.png" class="img-responsive" alt="Reponsive Logo">
         </div>
     </div>
 
     <div class="jumbotron">
         <div class="container">
-          <h2 style="text-align: center">Thanks for choosing to become a Member!</h2><br>
-          <p style="text-align: center">We're really excited to have you. Follow the PayPal link below to sign up and confirm your membership!</p>
+          <h2 style="text-align: center">Welcome, new member!</h2><br>
+          <p style="text-align: center">We're really excited to have you join us to taste whiskey together.<br>Follow the PayPal link below to sign up and confirm your membership!</p> <br>
           <div class="row">
-            <div class="col-md-6 col-offset-5">
+            <div class="col-lg-2 col-offset-5">
              <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                 <input type="hidden" name="cmd" value="_s-xclick">
                 <input type="hidden" name="hosted_button_id" value="3FSSYYTNUYK4J">
