--- a/makeapayment.html
+++ b/makeapayment.html
@@ -35,17 +35,17 @@
     <div class="container">
 
     <div class="row">
-        <div class="col-lg-8 col-offset-2" id="logo">
+        <div class="col-lg-2 col-offset-5" id="logo">
           <img src="img/swcdark.png" class="img-responsive" alt="Reponsive Logo">
         </div>
     </div>
 
       <div class="row" id="payoptionrow">
-        <h2 style="text-align: center">Don't want to be a member right now?<br>That's OK.<br>Here are some other options for you:</h2>
+        <h2 style="text-align: center">Membership's not for you?<br>That's OK—pay only for our upcoming event:</h2>
         
         <div class="col-lg-4 col-offset-1" id="payoption">
-          <h2>First Timer</h2>
-          <p>You came with a friend. You're looking into this and seeing if it's what you're all about. Let's find out!</p>
+          <h2>First-Timers:</h2>
+          <p>Trying something new deserves a discount. No whiskey is free, but let's say half the price if it's your first time.</p>
           <p>
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                 <input type="hidden" name="cmd" value="_s-xclick">
@@ -57,18 +57,20 @@
         </div>
         
         <div class="col-lg-4 col-offset-2" id="payoption">
-          <h2>Repeat Offender</h2>
-          <p>You're no newbie, but you have commitment issues. Paying a little bit more for each event is just your thing.</p>
+          <h2>Repeat Offenders:</h2>
+          <p>Pay a little more to come a little less. Great for those with commitment issues or overly busy schedules.</p>
           <p>
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
               <input type="hidden" name="cmd" value="_s-xclick">
               <input type="hidden" name="hosted_button_id" value="HHPJ6XT2A55N8">
-              <input type="image" src="img/recurringbutton.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+ <!--              <input type="image" src="<img/recurringbutton.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!"> -->
               <img alt="" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
             </form>
           </p>
         </div>
       </div>
+      <br>
+      <br>
   </div>
 
   <footer>
@@ -89,6 +91,7 @@
     <script src="http://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/events.js"></script>
 
   </body>
 </html>
